[package]
name = "mwdh"
version = "0.1.3"
edition = "2024"
repository = "https://github.com/earomc/mwdh"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
zip = "6.0.0"
clap = { version = "4", features = ["derive"] }
colored = "3.0.0"
anyhow = "1.0.100"
tokio-util = { version = "0.7.17", features = ["io"] }
futures-util = "0.3.31"
indicatif = "0.18"
flate2 = "1.1.5"
num_cpus = "1.17.0"
scopeguard = "1.2.0"
crossbeam = "0.8.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
